--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -132,6 +132,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:visibility="gone"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
 
@@ -221,6 +222,34 @@
                             android:textColor="#ffdadada"
                             android:textSize="13sp" />
                     </LinearLayout>
+                    <LinearLayout
+                        android:id="@+id/memberFollowLinearLayout"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:gravity="center_horizontal"
+                        android:orientation="vertical">
+
+                        <FrameLayout
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content">
+
+                            <ImageView
+                                android:layout_width="wrap_content"
+                                android:layout_height="wrap_content"
+                                android:layout_marginTop="5dp"
+                                android:src="@drawable/icon_mine_follow" />
+
+                        </FrameLayout>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginTop="9dp"
+                            android:text="我的关注"
+                            android:textColor="#ffdadada"
+                            android:textSize="13sp" />
+                    </LinearLayout>
                 </LinearLayout>
 
                 <LinearLayout
@@ -270,11 +299,12 @@
 
 
 
-                    <LinearLayout
+                    <!--<LinearLayout
                         android:id="@+id/memberFollowLinearLayout"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
+                        android:visibility="gone"
                         android:gravity="center_horizontal"
                         android:orientation="vertical">
 
@@ -297,7 +327,7 @@
                             android:text="我的关注"
                             android:textColor="#ffdadada"
                             android:textSize="13sp" />
-                    </LinearLayout>
+                    </LinearLayout>-->
 
                     <LinearLayout
                         android:id="@+id/memberFreeEnterLinearLayout"
@@ -340,7 +370,7 @@
                     <LinearLayout
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
-                        android:layout_weight="2"
+                        android:layout_weight="3"
                         android:orientation="vertical" />
                 </LinearLayout>
 
@@ -741,6 +771,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:gravity="center_horizontal"
                             android:orientation="vertical">
 
@@ -806,6 +837,11 @@
                                 android:textColor="#ffdadada"
                                 android:textSize="13sp" />
                         </LinearLayout>
+                        <LinearLayout
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_weight="1"
+                            android:orientation="vertical" />
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
