--- a/app/src/main/res/layout/activity_member_chat_details.xml
+++ b/app/src/main/res/layout/activity_member_chat_details.xml
@@ -40,6 +40,7 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/contentEdit"
             android:paddingStart="8dp"
             android:layout_width="0dp"
             android:layout_height="30dp"
