--- a/app/src/main/res/layout/activity_notice_details.xml
+++ b/app/src/main/res/layout/activity_notice_details.xml
@@ -43,6 +43,7 @@
                 android:orientation="vertical">
 
                 <ImageView
+                    android:id="@+id/logoPic"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:src="@drawable/icon_logo"
@@ -64,6 +65,7 @@
                 android:layout_height="wrap_content"
                 android:orientation="vertical">
                 <TextView
+                    android:id="@+id/titleTv"
                     android:layout_marginTop="13dp"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
@@ -84,6 +86,7 @@
                         android:textSize="10sp"
                         />
                     <TextView
+                        android:id="@+id/timeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="早上 09:00 - 下午18:00"
@@ -104,6 +107,7 @@
                         android:textSize="10sp"
                         />
                     <TextView
+                        android:id="@+id/phoneTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="022-15682141568"
@@ -124,6 +128,7 @@
                         android:textSize="10sp"
                         />
                     <TextView
+                        android:id="@+id/addressTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="AIJ·天津 南开森淼店 教学基地"
@@ -144,6 +149,7 @@
                         android:textSize="10sp"
                         />
                     <TextView
+                        android:id="@+id/typeTv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:text="MV舞蹈 编舞 中国风"
@@ -171,6 +177,7 @@
             android:textSize="10sp"
             />
         <TextView
+            android:id="@+id/introduceTv"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginStart="52dp"
@@ -198,6 +205,7 @@
             android:textSize="10sp"
             />
         <ImageView
+            android:id="@+id/hezuoPic"
             android:maxWidth="269dp"
             android:maxHeight="151dp"
             android:layout_marginTop="15dp"
