--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -182,6 +182,7 @@
                                 android:background="@drawable/shape_red"
                                 android:gravity="center"
                                 android:text="4"
+                                android:visibility="gone"
                                 android:textColor="#ffffffff"
                                 android:textSize="11sp" />
                         </FrameLayout>
@@ -355,6 +356,7 @@
                                 android:background="@drawable/shape_red"
                                 android:gravity="center"
                                 android:text="4"
+                                android:visibility="gone"
                                 android:textColor="#ffffffff"
                                 android:textSize="11sp" />
                         </FrameLayout>
@@ -380,7 +382,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="19dp"
                     android:orientation="vertical"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
@@ -723,7 +725,7 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="19dp"
                     android:orientation="vertical"
-                    android:visibility="visible">
+                    android:visibility="gone">
 
                     <TextView
                         android:layout_width="wrap_content"
