--- a/app/src/main/res/layout/member_chat_item.xml
+++ b/app/src/main/res/layout/member_chat_item.xml
@@ -18,6 +18,7 @@
         android:layout_height="wrap_content">
 
         <TextView
+            android:id="@+id/nameTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="topRock or Freeze"
@@ -25,6 +26,7 @@
             android:textSize="16sp"
             />
         <TextView
+            android:id="@+id/contentTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="15dp"
@@ -35,11 +37,14 @@
     </LinearLayout>
 
     <LinearLayout
+        android:id="@+id/msgLayout"
         android:layout_alignParentEnd="true"
         android:orientation="vertical"
+        android:visibility="gone"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content">
         <TextView
+            android:id="@+id/timeTv"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:text="五分钟前"
