--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -773,7 +773,6 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:visibility="gone"
                             android:gravity="center_horizontal"
                             android:orientation="vertical">
 
@@ -839,11 +838,11 @@
                                 android:textColor="#ffdadada"
                                 android:textSize="13sp" />
                         </LinearLayout>
-                        <LinearLayout
+                      <!--  <LinearLayout
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
-                            android:orientation="vertical" />
+                            android:orientation="vertical" />-->
                     </LinearLayout>
                     <LinearLayout
                         android:layout_width="match_parent"
