--- a/app/src/main/res/layout/fragment_mine.xml
+++ b/app/src/main/res/layout/fragment_mine.xml
@@ -619,6 +619,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:gravity="center_horizontal"
                             android:orientation="vertical">
 
@@ -648,6 +649,7 @@
                             android:layout_width="0dp"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
+                            android:visibility="gone"
                             android:gravity="center_horizontal"
                             android:orientation="vertical">
 
@@ -671,6 +673,11 @@
                                 android:textColor="#ffdadada"
                                 android:textSize="13sp" />
                         </LinearLayout>
+                          <LinearLayout
+                           android:layout_width="0dp"
+                           android:layout_height="wrap_content"
+                           android:layout_weight="2"
+                           android:orientation="vertical" />
                     </LinearLayout>
                     <!--<LinearLayout
                         android:layout_width="match_parent"
@@ -848,6 +855,7 @@
                         android:layout_width="match_parent"
                         android:layout_height="wrap_content"
                         android:layout_marginTop="30dp"
+                        android:visibility="gone"
                         android:orientation="horizontal">
 
 
