--- a/app/src/main/res/layout/chat_info_item.xml
+++ b/app/src/main/res/layout/chat_info_item.xml
@@ -12,6 +12,7 @@
         android:orientation="horizontal">
 
         <ImageView
+            android:id="@+id/leftHead"
             android:layout_width="57dp"
             android:layout_height="57dp"
             android:src="@drawable/icon_video_head_placeholder" />
@@ -57,6 +58,7 @@
             android:textSize="12sp" />
 
         <ImageView
+            android:id="@+id/rightHead"
             android:layout_width="57dp"
             android:layout_height="57dp"
             android:src="@drawable/icon_video_head_placeholder" />
