--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="#29282F"
     tools:context=".ui.fgt.home.HomeFragment">
 
     <android.support.v4.widget.NestedScrollView
@@ -12,7 +13,6 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="#29282F"
             android:orientation="vertical">
 
             <View
@@ -93,7 +93,7 @@
             <android.support.v7.widget.RecyclerView
                 android:id="@+id/video_recyclerView"
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
+                android:layout_height="match_parent"
                 android:overScrollMode="never" />
 
         </LinearLayout>
